--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "bcrypt": "^5.0.1",
     "crypto": "^1.0.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^6.6.1",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-jwt": "^1.1.7",
+    "react-router-dom": "^6.4.1",
     "validator": "^13.7.0"
   },
   "devDependencies": {
